<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/myImageView"
        android:layout_width="match_parent"
        android:layout_height="531dp"
        android:contentDescription="@string/cover_image"
        android:foregroundGravity="top"
        android:src="@drawable/cover_image" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/startButton"
        android:layout_below="@id/myImageView"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="12dp"
        android:text="@string/welcome_text"
        android:layout_centerHorizontal="true"
        android:textColor="@color/dark_purple"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"

        android:background="@drawable/rounded_button"

        android:text="@string/entry_button"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:cornerRadius="50dp" />


</RelativeLayout>